
Ver.5.8-dev (in development)
- Improve speed performance of Native Authentication and LDAP Authentication.
- Add DB_FileMaker_DataAPI class to support FileMaker Data API of FileMaker Server 17.
- Support retrieving image files in container fields when using DB_FileMaker_DataAPI class.
- Support uploading files to container fields when using DB_FileMaker_DataAPI class.
- Update FMDataAPI.php (Ver.10) for FileMaker Data API.
- Add JSEncrypt <http://travistidwell.com/jsencrypt/> to "js_lib" directory in "lib" directory and
  remove "bi2php" from "lib" directory to improve speed performance of Native Authentication.
- The INTERMediator.recordLimit property is introduced to store the number of records. Also added methods:
  INTERMediator.setRecordLimit(cname, limit) and INTERMediator.clearRecordLimit(cname).
- Remove search_page2.html ("search(using JavaScript)") in Practices directory.
- [INFO] Require a 2048-bit private key at least for authentication. Please update in case of using Native 
  Authentication or LDAP Authentication.
- [INFO] FileMaker Data API (Trial) of FileMaker Server 16 is no longer supported.
- [BUG FIX] If the server doesn't have valid locale (ex. Windows Server), the number format with thousand
  separator wasn't seen as we wished.
- [BUG FIX] In some case, the record number of related context was affected by pagination record limits.
- [BUG FIX] Fix buildup.sh to minify correctly on FreeBSD (Thanks to Tomomitsu Baba).
- [BUG FIX] In step navigation page, sometimes tap affected to clicking any elements on moved page.

Ver.5.7 (March 29, 2018)
- The "data-im-format" attribute is introduced.
  Please see for detail: <http://inter-mediator.info/ja/for-developers/format.html> (Japanese)
- Microsoft SQL Server is contained in INTER-Mediator support database.
- Support PHP 7.2.
- Start to support FileMaker Data API (Trial) of FileMaker Server 16 as an experimental feature.