@@ -16,7 +16,7 @@ before_script:
 test:
   script:
     - docker run -e "container=docker" -d --name alpine alpine:latest /sbin/init
-    - docker exec -e DISPLAY=:99.0 -i alpine sh -c "apk add --no-cache sudo curl ruby ruby-json ruby-io-console git && git clone https://github.com/INTER-Mediator/INTER-Mediator && cd INTER-Mediator && git checkout master && gem install itamae --no-doc && itamae local dist-docs/vm-for-trial/recipe.rb"
+    - docker exec -e DISPLAY=:99.0 -i alpine sh -c "apk add --no-cache sudo curl ruby ruby-json ruby-io-console ruby-etc git && git clone https://github.com/INTER-Mediator/INTER-Mediator && cd INTER-Mediator && git checkout master && gem install itamae --no-doc && itamae local dist-docs/vm-for-trial/recipe.rb"
     - docker exec -e DISPLAY=:99.0 -i alpine sh -c "phpunit --bootstrap /INTER-Mediator/vendor/autoload.php --configuration /INTER-Mediator/spec/INTER-Mediator-UnitTest/phpunit.xml /INTER-Mediator/spec/INTER-Mediator-UnitTest/INTERMediator_AllTests.php"
     - docker exec -e DISPLAY=:99.0 -i alpine sh -c "/usr/bin/buster-test -r specification -c /INTER-Mediator/spec/buster.js"
     - docker stop alpine
