@@ -517,13 +517,10 @@ describe package('unifont'), :if => os[:family] == 'ubuntu' do
   it { should be_installed }
 end
 
-#describe package('virtualbox-additions-grsec'), :if => os[:family] == 'alpine' && host_inventory['virtualization'][:system] != 'docker' do
-#  it { should be_installed }
-#end
 describe package('virtualbox-guest-additions'), :if => os[:family] == 'alpine' && host_inventory['virtualization'][:system] != 'docker' do
   it { should be_installed }
 end
-describe package('virtualbox-guest-modules-grsec'), :if => os[:family] == 'alpine' && host_inventory['virtualization'][:system] != 'docker' do
+describe package('virtualbox-guest-modules-vanilla'), :if => os[:family] == 'alpine' && host_inventory['virtualization'][:system] != 'docker' do
   it { should be_installed }
 end
 
